...
  _GunInOrderPageState(this._user, this._id);

  @override
  Widget build(BuildContext context) {
    return Scaffold(
        appBar: AppBar(backgroundColor: Colors.indigo, elevation: 0,
          title: Text('#/Gun/Quantity', style: TextStyle(color: Colors.white)),),
        body: FutureBuilder<List<GunInOrder>>(
          future: getGunsInOrder(_user.token, _id), builder: (context, snapshot) {
          if (snapshot.hasData) {
            return Container(
              color: Colors.indigo,
              padding: EdgeInsets.only(top: 20),
...
